# slicer_dosimetry

./: .gitignore  CMakeLists.txt  CalibratedFilm.nrrd  Dawki_kalibracja.txt  Pacjent_Ref1160cGy.tif  README.md  calibration_parameters.json
algorithm_dev/: calibration_generation.ipynb  data.pkl  dosymetry.ipynb  strip_detection.ipynb
dosimetry/: CMakeLists.txt  dosimetry.py
dosimetry/Resources/UI/: dosimetry.ui
dosimetry/Testing/Python/: example_test.py
dosimetry/src/: detect_dosimetry_stripes.py  dosimetry_logic.py  dosimetry_parameter_node.py  dosimetry_settings_widget.py  dosimetry_widget.py  logic_subprocess.py  optimize.py  utils.py
dosymetry/: CMakeLists.txt  dosymetry.py
dosymetry/Resources/UI/: dosymetry.ui
dosymetry/src/: detect_dosymetry_stripes.py  dosymetry_settings_widget.py  dosymetry_widget.py  imports.py  logic_subprocess.py
dosymetry_calibration/: CMakeLists.txt
dosymetry_calibration/dosymetry/: CMakeLists.txt  dosymetry.py
dosymetry_calibration/dosymetry/Resources/UI/: dosymetry.ui
dosymetry_calibration/dosymetry/Testing/Python/: CMakeLists.txt  example_test.py
dosymetry_calibration/dosymetry/src/: detect_dosymetry_stripes.py  dosymetry_calibration_logic.py  dosymetry_calibration_parameter_node.py  dosymetry_calibration_widget.py  dosymetry_logic.py  dosymetry_parameter_node.py  dosymetry_settings_widget.py  dosymetry_widget.py  imports.py  logic_subprocess.py  optimize.py  utils.py
dosymetry_calibration/film_calibration/: CMakeLists.txt  film_calibration.py
dosymetry_calibration/film_calibration/Resources/UI/: film_calibration.ui
dosymetry_calibration/film_calibration/Testing/Python/: example_test.py
dosymetry_calibration/film_calibration/src/: film_calibration_logic.py  film_calibration_parameter_node.py  film_calibration_widget.py  imports.py  marker_detection.py
dosymetry_calibration/gamma_analysis/: gamma_analysis.py
dosymetry_calibration/gamma_analysis/Resources/UI/: gamma_analysis.ui
dosymetry_calibration/gamma_analysis/src/: gamma_analysis_logic.py  gamma_analysis_parameter_node.py  gamma_analysis_settings_widget.py  gamma_analysis_widget.py  imports.py
film_calibration/: film_calibration.py
film_calibration/Resources/UI/: film_calibration.ui
film_calibration/Testing/Python/: example_test.py
film_calibration/src/: marker_detection.py
gamma_analysis/: CMakeLists.txt  gamma_analysis.py
gamma_analysis/Resources/UI/: gamma_analysis.ui
gamma_analysis/src/: gamma_analysis_logic.py  gamma_analysis_parameter_node.py  gamma_analysis_widget.py  imports.py
stripe_calibration/: CMakeLists.txt  stripe_calibration.py
stripe_calibration/Resources/UI/: film_calibration.ui  stripe_calibration.ui
stripe_calibration/Testing/Python/: example_test.py
stripe_calibration/src/: marker_detection.py  stripe_calibration_logic.py  stripe_calibration_parameter_node.py  stripe_calibration_widget.py
